# game-of-life

./: .gitignore  Cargo.toml  README.md
src/: cell.rs  lib.rs  main.rs  pattern.rs  renderer.rs  world.rs
tools/: random_pattern_generator.py
