[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Consider not adding all default features from `ggez` with something
# like:
#
# flate2 = { version = "1.0.3", default-features = false, features = ["zlib"] }
#
# https://doc.rust-lang.org/cargo/reference/features.html#dependency-features
ggez = "0.9.3"
